# npp

./: .gitignore  CMakeLists.txt  README.md
includes/: Ncurses.hpp  Screen.hpp  Window.hpp  init.hpp  npp.hpp  status.h
srcs/: Screen.cpp  Window.cpp  init.cpp
